fixed a bug with  rp per [league] not showing properly everywhere and added an introduction dialog for newcomers

--- a/css/game-style.css
+++ b/css/game-style.css
@@ -80,3 +80,10 @@ h5 {
    flex-direction: column;
 }
 
+#introduction {
+   position: absolute;
+   z-index: 1;
+   left: 35%;
+   top: 35%;
+   width: 475px;
+}
